--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
     "incremental": true,
-    "target": "es5",
+    "target": "esnext",
     "module": "commonjs",
     "declaration": true,
     "outDir": "lib",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "jsx": "react"
+    "jsx": "react-native"
   },
   "include": [
     "src"
