--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sklink/react-native-responsive-layout",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "main": "index.js",
   "scripts": {
     "build": "npx tsc"
@@ -15,11 +15,14 @@
   "author": "Matt Doak",
   "license": "ISC",
   "devDependencies": {
+    "@types/react": "^18.0.7",
+    "@types/react-native": "^0.67.6",
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-native": "^0.68.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-extended-stylesheet": "^0.12.0"
   }
 }
