--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sklink/react-native-responsive-layout",
-  "version": "1.0.10",
+  "version": "1.0.12",
   "main": "index.js",
   "scripts": {
     "build": "npx tsc"
@@ -19,10 +19,9 @@
     "@types/react-native": "^0.67.6",
     "typescript": "^4.6.3"
   },
-  "dependencies": {
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*",
     "react-native-extended-stylesheet": "^0.12.0"
   }
 }
