--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "strict": true,
     "target": "esnext",
     "sourceMap": true,
-    "outDir": "dist",
+    "outDir": "lib",
     "rootDir": "src",
     "skipLibCheck": true
   },
