--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sklink/react-native-responsive-layout",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "main": "lib/index.js",
   "scripts": {
     "build": "npx tsc"
@@ -23,5 +23,9 @@
     "react": "*",
     "react-native": "*",
     "react-native-extended-stylesheet": "^0.12.0"
+  },
+  "exports": {
+    ".": "./lib/index.js",
+    "./*": "./lib/*.js"
   }
 }
